@@ -1,40 +1,40 @@
 package com.example.Ecomm.serviceImpl;
 
+import java.io.IOException;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Collectors;
 import java.util.Date;
+import java.util.List;
 
+import org.json.JSONException;
 import org.json.JSONObject;
-
-import com.razorpay.RazorpayClient;
-import com.razorpay.Utils;
-
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import com.razorpay.RazorpayClient;
+import com.razorpay.RazorpayException;
+import com.razorpay.Utils;
 
 import com.example.Ecomm.dto.PaymentDTO;
 import com.example.Ecomm.dto.RazorpayOrderRequestDTO;
 import com.example.Ecomm.dto.RazorpayOrderResponseDTO;
 import com.example.Ecomm.dto.RazorpayPaymentCaptureRequestDTO;
-
 import com.example.Ecomm.entitiy.Order;
 import com.example.Ecomm.entitiy.Order.OrderStatus;
 import com.example.Ecomm.entitiy.Payment;
-
 import com.example.Ecomm.exception.ResourceNotFoundException;
-
 import com.example.Ecomm.repository.OrderRepository;
 import com.example.Ecomm.repository.PaymentRepository;
-
 import com.example.Ecomm.service.CartService;
 import com.example.Ecomm.service.PaymentService;
 
 @Service
 public class PaymentServiceImpl implements PaymentService {
+
+    private final PaymentRepository paymentRepository;
+    private final OrderRepository orderRepository;
+    private final CartService cartService;
 
     @Value("${razorpay.key.id}")
     private String razorpayKeyId;
@@ -42,15 +42,15 @@ public class PaymentServiceImpl implements PaymentService {
     @Value("${razorpay.key.secret}")
     private String razorpayKeySecret;
 
-    @Autowired
-    private PaymentRepository paymentRepository;
-
-    @Autowired
-    private OrderRepository orderRepository;
-
-    // ✅ ADD THIS
-    @Autowired
-    private CartService cartService;
+    public PaymentServiceImpl(
+            PaymentRepository paymentRepository,
+            OrderRepository orderRepository,
+            CartService cartService
+    ) {
+        this.paymentRepository = paymentRepository;
+        this.orderRepository = orderRepository;
+        this.cartService = cartService;
+    }
 
     // ================= NORMAL PAYMENT =================
 
@@ -62,13 +62,10 @@ public class PaymentServiceImpl implements PaymentService {
                 .orElseThrow(() -> new ResourceNotFoundException("Order", "Id", orderId));
 
         if (order.getShippingAddress() == null || order.getStatus() == OrderStatus.DRAFT) {
-            throw new IllegalStateException(
-                    "Please select shipping address before proceeding to payment"
-            );
+            throw new IllegalStateException("Please select shipping address before proceeding to payment");
         }
 
-        if (order.getStatus() == OrderStatus.PAID ||
-                order.getStatus() == OrderStatus.CANCELLED) {
+        if (order.getStatus() == OrderStatus.PAID || order.getStatus() == OrderStatus.CANCELLED) {
             throw new IllegalArgumentException("Order already PAID or CANCELLED");
         }
 
@@ -81,11 +78,9 @@ public class PaymentServiceImpl implements PaymentService {
 
         Payment savedPayment = paymentRepository.save(payment);
 
-        // ✅ PAYMENT SUCCESS
         order.setStatus(OrderStatus.PAID);
         orderRepository.save(order);
 
-        // ✅ CLEAR CART ONLY AFTER PAYMENT SUCCESS
         cartService.clearCart(order.getCustomer().getId());
 
         return convertToDTO(savedPayment);
@@ -94,78 +89,100 @@ public class PaymentServiceImpl implements PaymentService {
     // ================= RAZORPAY ORDER =================
 
     @Override
-    public RazorpayOrderResponseDTO createRazorpayOrder(RazorpayOrderRequestDTO requestDTO) throws Exception {
+    public RazorpayOrderResponseDTO createRazorpayOrder(
+            RazorpayOrderRequestDTO requestDTO
+    ) throws JSONException, IOException {
 
-        RazorpayClient razorpay = new RazorpayClient(razorpayKeyId, razorpayKeySecret);
+        try {
+            RazorpayClient razorpay = new RazorpayClient(razorpayKeyId, razorpayKeySecret);
 
-        BigDecimal amountInRupees = BigDecimal.valueOf(requestDTO.getAmount());
-        long amountInPaise = amountInRupees.multiply(BigDecimal.valueOf(100)).longValue();
+            long amountInPaise = BigDecimal.valueOf(requestDTO.getAmount())
+                    .multiply(BigDecimal.valueOf(100))
+                    .longValue();
 
-        JSONObject orderRequest = new JSONObject();
-        orderRequest.put("amount", amountInPaise);
-        orderRequest.put("currency", requestDTO.getCurrency());
-        orderRequest.put("receipt", requestDTO.getReceipt());
+            JSONObject orderRequest = new JSONObject();
+            orderRequest.put("amount", amountInPaise);
+            orderRequest.put("currency", requestDTO.getCurrency());
+            orderRequest.put("receipt", requestDTO.getReceipt());
 
-        com.razorpay.Order razorpayOrder = razorpay.orders.create(orderRequest);
+            com.razorpay.Order razorpayOrder = razorpay.orders.create(orderRequest);
 
-        RazorpayOrderResponseDTO dto = new RazorpayOrderResponseDTO();
-        dto.setId((String) razorpayOrder.get("id"));
-        dto.setEntity((String) razorpayOrder.get("entity"));
-        dto.setAmount(((Number) razorpayOrder.get("amount")).longValue());
-        dto.setAttempts(((Number) razorpayOrder.get("attempts")).intValue());
+            RazorpayOrderResponseDTO dto = new RazorpayOrderResponseDTO();
+            dto.setId(razorpayOrder.get("id").toString());
+            dto.setEntity(razorpayOrder.get("entity").toString());
 
-        Object createdAt = razorpayOrder.get("created_at");
-        if (createdAt instanceof Number) {
-            dto.setCreatedAt(((Number) createdAt).longValue());
-        } else if (createdAt instanceof Date) {
-            dto.setCreatedAt(((Date) createdAt).getTime() / 1000);
+            Object amount = razorpayOrder.get("amount");
+            if (amount instanceof Number number) {
+                dto.setAmount(number.longValue());
+            }
+
+            Object attempts = razorpayOrder.get("attempts");
+            if (attempts instanceof Number number) {
+                dto.setAttempts(number.intValue());
+            }
+
+            Object createdAt = razorpayOrder.get("created_at");
+            if (createdAt instanceof Number number) {
+                dto.setCreatedAt(number.longValue());
+            } else if (createdAt instanceof Date date) {
+                dto.setCreatedAt(date.getTime() / 1000);
+            }
+
+            dto.setCurrency(razorpayOrder.get("currency").toString());
+            dto.setReceipt(razorpayOrder.get("receipt").toString());
+            dto.setStatus(razorpayOrder.get("status").toString());
+
+            return dto;
+
+        } catch (RazorpayException e) {
+            throw new RuntimeException("Failed to create Razorpay order", e);
         }
-
-        dto.setCurrency((String) razorpayOrder.get("currency"));
-        dto.setReceipt((String) razorpayOrder.get("receipt"));
-        dto.setStatus((String) razorpayOrder.get("status"));
-
-        return dto;
     }
 
     // ================= RAZORPAY CAPTURE =================
 
     @Override
     @Transactional
-    public PaymentDTO captureRazorpayPayment(RazorpayPaymentCaptureRequestDTO requestDTO) throws Exception {
+    public PaymentDTO captureRazorpayPayment(
+            RazorpayPaymentCaptureRequestDTO requestDTO
+    ) throws JSONException, IOException {
 
-        JSONObject options = new JSONObject();
-        options.put("razorpay_order_id", requestDTO.getRazorpayOrderId());
-        options.put("razorpay_payment_id", requestDTO.getRazorpayPaymentId());
-        options.put("razorpay_signature", requestDTO.getRazorpaySignature());
+        try {
+            JSONObject options = new JSONObject();
+            options.put("razorpay_order_id", requestDTO.getRazorpayOrderId());
+            options.put("razorpay_payment_id", requestDTO.getRazorpayPaymentId());
+            options.put("razorpay_signature", requestDTO.getRazorpaySignature());
 
-        if (!Utils.verifyPaymentSignature(options, razorpayKeySecret)) {
-            throw new IllegalArgumentException("Invalid Razorpay signature");
+            if (!Utils.verifyPaymentSignature(options, razorpayKeySecret)) {
+                throw new IllegalArgumentException("Invalid Razorpay signature");
+            }
+
+            Order order = orderRepository.findById(requestDTO.getInternalOrderId())
+                    .orElseThrow(() -> new ResourceNotFoundException(
+                            "Order", "Id", requestDTO.getInternalOrderId()));
+
+            Payment payment = new Payment();
+            payment.setOrder(order);
+            payment.setPaymentMethod("RAZORPAY");
+            payment.setAmount(requestDTO.getAmount());
+            payment.setPaymentDate(LocalDateTime.now());
+            payment.setStatus("COMPLETED");
+
+            Payment savedPayment = paymentRepository.save(payment);
+
+            order.setStatus(OrderStatus.PAID);
+            orderRepository.save(order);
+
+            cartService.clearCart(order.getCustomer().getId());
+
+            return convertToDTO(savedPayment);
+
+        } catch (RazorpayException e) {
+            throw new RuntimeException("Failed to capture Razorpay payment", e);
         }
-
-        Order order = orderRepository.findById(requestDTO.getInternalOrderId())
-                .orElseThrow(() -> new ResourceNotFoundException("Order", "Id", requestDTO.getInternalOrderId()));
-
-        Payment payment = new Payment();
-        payment.setOrder(order);
-        payment.setPaymentMethod("RAZORPAY");
-        payment.setAmount(requestDTO.getAmount());
-        payment.setPaymentDate(LocalDateTime.now());
-        payment.setStatus("COMPLETED");
-
-        Payment savedPayment = paymentRepository.save(payment);
-
-        // ✅ PAYMENT SUCCESS
-        order.setStatus(OrderStatus.PAID);
-        orderRepository.save(order);
-
-        // ✅ CLEAR CART ONLY AFTER PAYMENT SUCCESS
-        cartService.clearCart(order.getCustomer().getId());
-
-        return convertToDTO(savedPayment);
     }
 
-    // ================= WEBHOOK PAYMENT =================
+    // ================= WEBHOOK =================
 
     @Override
     @Transactional
@@ -174,30 +191,27 @@ public class PaymentServiceImpl implements PaymentService {
         Order order = orderRepository.findById(internalOrderId)
                 .orElseThrow(() -> new ResourceNotFoundException("Order", "Id", internalOrderId));
 
-        BigDecimal amountInRupees = BigDecimal
-                .valueOf(paymentEntity.getLong("amount"))
+        BigDecimal amount = BigDecimal.valueOf(paymentEntity.getLong("amount"))
                 .divide(BigDecimal.valueOf(100));
 
         Payment payment = new Payment();
         payment.setOrder(order);
         payment.setPaymentMethod("RAZORPAY");
-        payment.setAmount(amountInRupees);
+        payment.setAmount(amount);
         payment.setPaymentDate(LocalDateTime.now());
         payment.setStatus("COMPLETED");
 
         Payment saved = paymentRepository.save(payment);
 
-        // ✅ PAYMENT SUCCESS
         order.setStatus(OrderStatus.PAID);
         orderRepository.save(order);
 
-        // ✅ CLEAR CART ONLY AFTER PAYMENT SUCCESS
         cartService.clearCart(order.getCustomer().getId());
 
         return convertToDTO(saved);
     }
 
-    // ================= QUERY METHODS =================
+    // ================= QUERIES =================
 
     @Override
     public PaymentDTO getPaymentById(Long paymentId) {
@@ -210,7 +224,9 @@ public class PaymentServiceImpl implements PaymentService {
     @Override
     public List<PaymentDTO> getAllPayments() {
         return paymentRepository.findAll()
-                .stream().map(this::convertToDTO).collect(Collectors.toList());
+                .stream()
+                .map(this::convertToDTO)
+                .toList();
     }
 
     @Override
@@ -219,7 +235,9 @@ public class PaymentServiceImpl implements PaymentService {
                 .orElseThrow(() -> new ResourceNotFoundException("Order", "Id", orderId));
 
         return paymentRepository.findByOrder(order)
-                .stream().map(this::convertToDTO).collect(Collectors.toList());
+                .stream()
+                .map(this::convertToDTO)
+                .toList();
     }
 
     @Override
@@ -229,7 +247,7 @@ public class PaymentServiceImpl implements PaymentService {
         paymentRepository.delete(payment);
     }
 
-    // ================= HELPERS =================
+    // ================= MAPPER =================
 
     private PaymentDTO convertToDTO(Payment payment) {
         PaymentDTO dto = new PaymentDTO();
